--- a/pags/calc-silk/calcSilk.html
+++ b/pags/calc-silk/calcSilk.html
@@ -15,6 +15,12 @@
 
                 <label for="">Altura: </label>
                 <input type="number" name="" id="altura">
+
+                <label for="">Altura: </label>
+                <input type="number" name="" id="altura">
+
+                <label for="">Altura: </label>
+                <input type="number" name="" id="altura">
             </div>
 
             <div class="s1">
