--- a/pags/calc-silk/calcSilk.html
+++ b/pags/calc-silk/calcSilk.html
@@ -5,32 +5,29 @@
     <div>
         <div>
             <div>
-                <h1>Cálculo de quantidade por M² baseado no tamanho.</h1>
-                <p>(EXE: 4x4 é igual 500un por M²)</p>
+                <h1>Cálculo Silk.</h1>
+                
             </div>
 
             <div class="s1">
-                <label for="">Base: </label>
-                <input type="number" name="" id="base">
+                <label for="">Qt. Camisas: </label>
+                <input type="number" name="" id="camisas">
 
-                <label for="">Altura: </label>
-                <input type="number" name="" id="altura">
+                <label for="">Telas: </label>
+                <input type="number" name="" id="telas">
 
-                <label for="">Altura: </label>
-                <input type="number" name="" id="altura">
-
-                <label for="">Altura: </label>
-                <input type="number" name="" id="altura">
+                <label for="">Aplicações: </label>
+                <input type="number" name="" id="ap">
             </div>
 
             <div class="s1">
-                <p><input type="button" value='Verificar' onclick="calcular2()"></p>
+                <p><input type="button" value='Calcular' onclick="CalcSilk()"></p>
             </div>
         </div>
 
 
 
-        <div class="s1" id="res1">
+        <div class="s1" id="resSilk">
             Preencha os dados para ver o resultado!
         </div>
 
