--- a/pags/calc-silk/calcSilk.html
+++ b/pags/calc-silk/calcSilk.html
@@ -6,6 +6,7 @@
         <div>
             <div>
                 <h1>Cálculo Silk.</h1>
+                <p>camisas até GG</p>
                 
             </div>
 
@@ -40,20 +41,15 @@
     <div id="div3">
         <div>
             <div>
-                <h1>Cálculo de quantidade por M² baseado no tamanho e quantidade.</h1>
-                <p>(EXE: 10x10 é igual 98un e da 1M² "70x140")</p>
+                <h1>Camisas acima de GG.</h1>
+                <p></p>
             </div>
 
            <div class="s1">
-            <label for="">Base: </label>
-            <input type="number" name="" id="n1">
+            <label for="">Qt. Camisas: </label>
+            <input type="number" name="" id="camisasxg+">
 
-            <label for="">Altura: </label>
-            <input type="number" name="" id="n2">
-
-            <label for="">Qt: </label>
-            <input type="number" name="" id="n1">
-            <p class="s1"><input type="button" value='Calcular' onclick="calcular2()"></p>
+            <p class="s1"><input type="button" value='Adicionar' onclick="add()"></p>
             </div>
         </div>
 
