--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
                 <li onclick="adesivo()">Cálculo Adesivo</li>
                 <li onclick="papel()">Cálculo Papel</li>
                 <li onclick="silk()">Cálculo Silk</li>
+                <li onclick="pedidos()">Pedidos</li>
+                <li onclick="entrega()">Entrega</li>
                 <!--  final Link paras as págs-->
             </ul>
 
             <ul class="nav-btn">
                 <!--  Botão Login-->
-                <a class="btn" href="/páginas/LogIn/index.html"><button type="submit">LogIn</button></a>
+                <a class="btn" href="/pags/login/login.html"><button type="submit">LogIn</button></a>
                 <!--  fFinal Botão Login-->
             </ul>
         </nav>
     </header>
+    
 
 
     <main>
