--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li onclick="adesivo()">Cálculo Adesivo</li>
                 <li onclick="papel()">Cálculo Papel</li>
                 <li onclick="silk()">Cálculo Silk</li>
-                <li onclick="pedidos()">Pedidos</li>
+                <li onclick="pedidos()">Produção</li>
                 <li onclick="entrega()">Entrega</li>
                 <!--  final Link paras as págs-->
             </ul>
@@ -51,12 +51,10 @@
         <div id="main"></div>
     </main>
 
-    <footer class="rodape">
-        <p>By DYTech &copy; </p>
-    </footer>
+   
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script src="/mobile.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="/script.js"></script>
    
 
 </body>
